Fix dropdown text cut off by native arrow
Add extra right padding to .adp-select so option text
doesn't overlap with the browser's native dropdown arrow.

--- a/static/snappass/css/custom.css
+++ b/static/snappass/css/custom.css
@@ -205,6 +205,10 @@ body {
   width: 100%;
 }
 
+.adp-select {
+  padding-right: 36px;
+}
+
 .adp-textarea:focus,
 .adp-select:focus {
   border-color: #0090d4;
